Added Trailer button and Bearplane secrets

--- a/de/index.html
+++ b/de/index.html
@@ -28,6 +28,33 @@
     @media (max-aspect-ratio: 50/49) {
       .hero-gif { width: 100vw; max-width: none; margin: 0; }
     }
+
+    .trailer-button {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background-color: darkred;
+      color: white;
+      padding: 15px 40px;
+      font-weight: bold;
+      font-size: 1.4em;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      gap: 10px;
+    }
+
+    .btn:hover {
+      background-color: #a00;
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
     .store-buttons { display: flex; justify-content: center; gap: 10px; margin-top: 20px; flex-wrap: wrap; }
     .store-buttons img { height: 76px; max-width: 262px; object-fit: contain; transition: transform 0.2s ease, box-shadow 0.2s ease; }
     .store-buttons img:hover { transform: scale(1.05); box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
@@ -52,6 +79,11 @@
   <img src="/images/main-12.gif" alt="Bearplane-Logo" class="hero-gif">
 
   <div class="section">
+
+    <div class="trailer-button">
+      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Trailer ansehen</a>
+    </div>
+
     <p class="intro-paragraph">
       <em><strong>Stürze dich als raketengestützter Bär in Bearplane in ein skurriles Action-Abenteuer, das lose von der legendären Geschichte des Zweiten Weltkriegs-Bären Wojtek inspiriert ist. Bekämpfe hinterhältige Feinde mit verrückten Fähigkeiten, nuklearen Snacks und einer gehörigen Portion Luftchaos.</strong></em>
     </p>
@@ -276,3 +308,16 @@
 
 </body>
 </html>
+
+
+<!-- BEARPLANE-GEHEIMNISSE!
+
+ - Tippe/klicke auf die Köpfe im Abspann-Menü, um eine Menge Atomic Snacks freizuschalten!
+ - Boost so viel wie möglich in den ersten 10 Sekunden des Spiels, um einen irrsinnig schnellen Hut freizuschalten
+ - Stirb, ohne jemanden zu besiegen, für eine seltsame Überraschung
+ - Triff fünfmal hintereinander erfolgreich mit dem Baseball, um den besten Jubel-Soundeffekt der Welt zu hören
+ - Erreiche 50.000 Gesamtkills und spiele dann auf Französisch, um einen feurigen und köstlichen Hut freizuschalten
+ - Erreiche 3.000 Kills im Endlosmodus für das endgültige Ende
+
+Danke fürs Spielen!
+– Matt -->
