--- a/fr/index.html
+++ b/fr/index.html
@@ -27,6 +27,32 @@
       }
     }
 
+    .trailer-button {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background-color: darkred;
+      color: white;
+      padding: 15px 40px;
+      font-weight: bold;
+      font-size: 1.4em;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      gap: 10px;
+    }
+
+    .btn:hover {
+      background-color: #a00;
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
     h1, h2 {
       color: darkred;
     }
@@ -179,6 +205,11 @@
   <img src="/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
 
   <div class="section">
+
+    <div class="trailer-button">
+      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Regarder la bande-annonce</a>
+    </div>
+
     <p class="intro-paragraph">
       <em><strong>Envolez-vous aux commandes d’un ours-fusée dans <em>Bearplane</em> : une aventure loufoque et pleine d’action, librement inspirée de la légendaire histoire de Wojtek l’ours. Affrontez des ennemis retors grâce à des capacités délirantes, des en-cas à fusion nucléaire et un joyeux chaos aérien.</strong></em>
     </p>
@@ -409,3 +440,16 @@
   </script>
 </body>
 </html>
+
+
+<!-- SECRETS DE BEARPLANE !
+
+ - Appuie/clique sur les têtes dans le menu des crédits pour débloquer plein de Snacks Atomiques
+ - Utilise le boost au maximum dans les 10 premières secondes pour débloquer un chapeau ultra rapide
+ - Meurs sans tuer personne pour une surprise étrange
+ - Réussis 5 coups consécutifs avec la batte de baseball pour entendre le meilleur effet sonore de foule au monde
+ - Obtiens 50 000 éliminations, puis joue en français pour débloquer un chapeau brûlant et délicieux
+ - Obtiens 3 000 éliminations en mode infini pour débloquer la fin ultime
+
+Merci d’avoir joué !
+– Matt -->
