--- a/bearplane.html
+++ b/bearplane.html
@@ -10,18 +10,15 @@
     text-align: center;
     padding: 40px;
     margin: 0;
-    font-size: 12px; /* Base size for mobile */
+    font-size: 12px; 
   }
 
-  /* Taller than wide — mobile portrait, foldables, etc. */
   @media (max-aspect-ratio: 1/1) {
     body {
       font-size: 12px;
     }
   }
 
-   
-  /* Wider than tall — desktop, tablets, landscape phones */
   @media (min-aspect-ratio: 1/1) {
     body {
       font-size: 16px;
@@ -94,7 +91,7 @@
 
   .social-links {
     margin-top: 40px;
-    margin-bottom: 60px; /* Add this for bottom spacing */
+    margin-bottom: 60px;
   }
 
   .social-links a {
@@ -205,7 +202,7 @@
     object-fit: cover;
     border-radius: 8px;
     transition: transform 0.2s ease;
-    cursor: pointer; /* Add this line */
+    cursor: pointer; 
   }
 
   .atomic-images img:hover {
@@ -259,14 +256,13 @@
     border-radius: 8px;
   }
 
-  /* Center the rows of images */
   .art-images,
   .music-images,
   .dev-images {
     display: flex;
     justify-content: center;
-    gap: 20px;        /* space between each image */
-    margin: 1em 0;    /* vertical spacing above/below */
+    gap: 20px;        
+    margin: 1em 0;   
   }
 
   .art-images img,
@@ -294,9 +290,9 @@
 
   <div class="section">
     
-<!--     <div class="trailer-button">
-      <a href="https://youtu.be/3JW6-kAru64" class="btn" target="_blank">▶ Watch the Trailer</a>
-    </div> -->
+    <div class="trailer-button">
+      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Watch the Trailer</a>
+    </div>
 
     <p class="intro-paragraph">
       <em><strong>Take to the skies as a rocket-powered bear in Bearplane: a whimsical, action-packed adventure loosely inspired by the legendary tale of Wojtek the Bear. Battle dastardly foes with outrageous abilities, nuclear-fused snacks, and a whole lot of midair mayhem.</strong></em>
@@ -566,3 +562,17 @@
 
 </body>
 </html>
+
+
+<!-- BEARPLANE SECRETS!
+
+ - Tap/click the heads in the Credits Menu to unlock a bunch o' Atomic Snacks!
+ - Boost as much as possible in the first 10 seconds of gameplay to unlock a crazy-fast hat
+ - Die without getting any kills for a weird surprise
+ - Get 5 consecitive succesful hits with a baseball to hear the the best cheering SFX in the world
+ - Get 50,000 total kills, then play the game in French to unlock a firey and delicious hat
+ - Get 3,000 kills in Endless Mode for the definitive ending
+
+
+Thanks for playing!
+- Matt -->
