--- a/it/index.html
+++ b/it/index.html
@@ -26,6 +26,34 @@
     html, body { margin: 0; padding: 0; width: 100%; overflow-x: hidden; }
     .hero-gif { width: 100%; max-width: 800px; margin: 0 auto; display: block; }
     @media (max-aspect-ratio: 50/49) { .hero-gif { width:100vw; max-width:none; margin:0; } }
+
+
+    .trailer-button {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background-color: darkred;
+      color: white;
+      padding: 15px 40px;
+      font-weight: bold;
+      font-size: 1.4em;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
+      gap: 10px;
+    }
+
+    .btn:hover {
+      background-color: #a00;
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
     .store-buttons { display: flex; justify-content: center; gap: 10px; margin-top: 20px; flex-wrap: wrap; }
     .store-buttons img { height: 76px; max-width: 262px; object-fit: contain; transition: transform .2s, box-shadow .2s; }
     .store-buttons img:hover { transform: scale(1.05); box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
@@ -50,6 +78,11 @@
   <img src="/images/main-12.gif" alt="Logo Bearplane" class="hero-gif">
 
   <div class="section">
+
+    <div class="trailer-button">
+      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Guarda il trailer</a>
+    </div>
+
     <p class="intro-paragraph">
       <em><strong>Vola nei cieli come un orso a razzo in <em>Bearplane</em>: un’avventura ricca di azione e umorismo, liberamente ispirata alla storia leggendaria di Wojtek l’orso della Seconda Guerra Mondiale. Sfida nemici astuti con poteri bizzarri, snack nucleari e un caos aereo irresistibile.</strong></em>
     </p>
@@ -273,3 +306,16 @@
 
 </body>
 </html>
+
+
+<!-- SEGRETI DI BEARPLANE!
+
+ - Tocca/clicca le teste nel menu dei crediti per sbloccare un sacco di Atomic Snack!
+ - Usa il turbo il più possibile nei primi 10 secondi per sbloccare un cappello super veloce
+ - Muori senza eliminazioni per una strana sorpresa
+ - Colpisci 5 volte di fila con la mazza da baseball per sentire il miglior tifo del mondo
+ - Ottieni 50.000 eliminazioni totali, poi gioca in francese per sbloccare un cappello infuocato e delizioso
+ - Ottieni 3.000 eliminazioni nella modalità infinita per vedere il vero finale
+
+Grazie per aver giocato!
+– Matt -->
