--- a/bearplane.html
+++ b/bearplane.html
@@ -368,7 +368,7 @@
   <div class="faq-item">
     <h3>How was Bearplane developed?</h3>
     <p>
-      Bearplane took flight during the 2020 lockdown, when travel and work screeched to a halt. Its creator, 
+      Bearplane took flight during the 2020 lockdown, when travel and work screeched to a halt. Its developer, 
       <a href="https://www.instagram.com/BurtBot/" target="_blank" rel="noopener noreferrer">Matthew Burton</a>, began exploring the quirkiest corners of history and discovered Wojtek, the ammo-hauling WWII bear. It was a tale too wild not to inspire a loosely adapted game.
     </p>
     <p>
@@ -378,9 +378,10 @@
       <strong>Tom &amp; Jerry</strong>’s perfectly synced slapstick timing.
     </p>
     <p>
-      In 2023, artists Leo Siebert,  
+      In 2023, artists 
+      Leo Siebert,  
       <a href="https://www.jordanwadellart.com" target="_blank" rel="noopener noreferrer">Jordan Wadell</a>,  
-      Vinnie Peters, and  
+      <a href="https://www.vinniepeters.com/" target="_blank" rel="noopener noreferrer">Vinnie Peters</a>,  and  
       <a href="https://www.behance.net/Michael_Burgess" target="_blank" rel="noopener noreferrer">Michael Burgess</a>  
       joined the project to hand-draw characters in a 1940s-cartoon style, paint sweeping scenic backdrops, and design wartime-propaganda UI. The team met in person for just four sessions, then handled the rest of their collaboration remotely via Discord.
     </p>
