--- a/B.E.A.R.html
+++ b/B.E.A.R.html
@@ -5,239 +5,319 @@
   <title>B.E.A.R. - Bear Essentials Athletic Recorder</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    /* Reset margins/padding */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { width: 100%; height: 100%; margin: 0; padding: 0; overflow-x: hidden; cursor: crosshair; }
     body {
       background-color: black;
-      color: #FFBF00;
+      color: #FFD85B;
       font-family: 'Courier New', Courier, 'Lucida Console', Monaco, monospace;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 20px;
+      animation: flicker 2s infinite;
     }
 
-    h1, h2 {
-      text-align: center;
+    /* Flicker animation */
+    @keyframes flicker {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.97; }
     }
 
-    label {
+    /* Full-bleed header GIF with aspect check & glare */
+    .hero-gif {
       display: block;
-      margin-top: 10px;
+      width: 100%; max-width: 700px; height: auto; margin: 0 auto; position: relative;
+    }
+    .hero-gif::after {
+      content: '';
+      position: absolute; top: -20%; left: -50%; width: 200%; height: 140%;
+      background: radial-gradient(circle at 50% 50%, rgba(255,255,255,0.1) 0%, transparent 60%);
+      transform: translateX(-100%) skewX(-20deg);
+      opacity: 0.3;
+      animation: glare 3s ease-in-out infinite;
+      pointer-events: none;
+    }
+    @keyframes glare {
+      0% { transform: translateX(-100%) skewX(-20deg); }
+      100% { transform: translateX(100%) skewX(-20deg); }
     }
 
-    input[type="number"], input[type="date"] {
-      background-color: black;
-      color: #FFBF00;
-      border: 1px solid #FFBF00;
-      font-family: inherit;
-      font-size: 1em;
-      padding: 4px 6px;
-      width: 100px;
+    /* Scanline overlay & rolling scan */
+    body::before {
+      content: '';
+      position: fixed; top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      pointer-events: none;
+      background-image: repeating-linear-gradient(
+        rgba(0, 0, 0, 0.2) 0px,
+        rgba(0, 0, 0, 0.2) 1px,
+        transparent 1px,
+        transparent 3px
+      );
+      z-index: 9999;
+      animation: scan 7s linear infinite;
+    }
+    @keyframes scan {
+      from { background-position-y: 0; }
+      to { background-position-y: 100vh; }
     }
 
-    button {
-      background-color: black;
-      color: #FFBF00;
-      border: 1px solid #FFBF00;
-      margin-top: 20px;
-      padding: 10px 20px;
+    /* Static noise overlay */
+    body::after {
+      content: '';
+      position: fixed; top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      pointer-events: none;
+      background: url('images/noise.png') repeat;
+      opacity: 0.03;
+      z-index: 9998;
+      animation: static 0.2s steps(10) infinite;
+    }
+    @keyframes static {
+      from { background-position: 0 0; }
+      to { background-position: 100% 100%; }
+    }
+
+    /* CTA container with tube border & inner glow */
+    .container {
+      max-width: 700px;
+      margin: -2px auto 0 auto;
+      padding: 0 20px 20px;
+      border: 2px solid #FFD85B;
+      border-radius: 0;
+      box-shadow: inset 0 0 10px rgba(255,216,91,0.5);
+    }
+
+    /* B.E.A.R. Score display */
+    .score-display {
+      text-align: center;
+      font-size: 1.4em;
+      margin: 10px 0;
+      color: #FFD85B;
       font-weight: bold;
-      cursor: pointer;
-      font-family: inherit;
     }
 
-    button:hover {
-      background-color: #222;
+    /* Controls row */
+    .controls-row {
+      display: flex; flex-wrap: wrap; gap: 10px; align-items: flex-end;
+      margin-bottom: 20px; overflow-x: auto; padding-bottom: 10px;
+    }
+    .control { display: flex; flex-direction: column; min-width: 120px; max-width: 200px; }
+    .control label { margin-bottom: 4px; font-size: 0.9em; position: relative; }
+
+    /* Inputs & buttons */
+    select, input[type="number"], input[type="date"] {
+      background-color: #FFD85B; color: black; border: 1px solid #FFD85B;
+      font-family: inherit; font-size: 1em; padding: 4px 6px; width: 100%;
+    }
+    input::placeholder { color: #7F692D; }
+    button {
+      background-color: #FFD85B; color: black; border: 1px solid #FFD85B;
+      padding: 10px 20px; font-weight: bold; cursor: pointer; white-space: nowrap;
+      flex-shrink: 0; position: relative;
+    }
+    button:hover { background-color: #BF9C44; }
+    button:active { background-color: #5D4A1F; }
+    select:focus, input:focus, button:focus {
+      background-color: #7F672D; color: #FFCE5B; border: 1px solid #FFD85B;
+      outline: none; box-shadow: 0 0 8px #FFD85B;
+    }
+    .run-time { display: flex; gap: 5px; }
+
+    /* Chart styling & glitch */
+    #progressChart { display: block; background-color: black;
+      border: 1px solid #FFD85B; width: 100%; height: auto; position: relative;
+    }
+    @keyframes glitch {
+      0% { transform: none; }
+      20% { transform: translate(-2px,2px); }
+      40% { transform: translate(2px,-2px); }
+      60% { transform: translate(-2px,-2px); }
+      80% { transform: translate(2px,2px); }
+      100% { transform: none; }
+    }
+    #progressChart.glitch { animation: glitch 0.3s linear; }
+
+    /* Text ghosting */
+    .control label, button { transition: text-shadow 0.2s ease; }
+    select:hover ~ .control label,
+    input:hover ~ .control label { text-shadow: 0 0 2px #FFD85B, 0 0 4px #FFD85B; }
+
+      /* Social links footer styling */
+    .social-links p {
+      color: #FFD85B;
+      font-size: 0.9em;
+      margin-bottom: 6px;
+    }
+    .social-links a {
+      color: #FFD85B;
+      text-decoration: none;
+      margin: 0 4px;
+      transition: color 0.2s ease;
+    }
+    .social-links a:hover {
+      color: #BF9C44;
     }
 
-    canvas {
-      background-color: #111;
-      border: 1px solid #FFBF00;
-      margin-top: 40px;
-    }
-
-    .run-time {
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      margin-top: 10px;
-    }
-  </style>
+</style>
 </head>
 <body>
-  <h1>🐻 B.E.A.R.</h1>
-  <h2>Bear Essentials Athletic Recorder</h2>
+  <!-- Header GIF -->
+  <img src="images/bear-app.gif" class="hero-gif" alt="BEAR App Header">
 
-  <label for="date">Week Ending:</label>
-  <input type="date" id="date">
+  <div class="container">
+    <!-- B.E.A.R. Score -->
+    <div class="score-display">
+      Your B.E.A.R. Score: <span id="bearScore">--</span>
+    </div>
 
-  <label>Deadlift (lbs):</label>
-  <input type="number" id="deadlift">
+    <!-- Controls row -->
+    <div class="controls-row">
+      <div class="control">
+        <label for="exercise">EXERCISE</label>
+        <select id="exercise">
+          <option value="deadlift">Deadlift</option>
+          <option value="dumbbell">Overhead Dumbell Press</option>
+          <option value="pullups">Pull-ups</option>
+          <option value="incline">Incline Bench Press</option>
+          <option value="squats">Squats</option>
+          <option value="dips">Dips</option>
+          <option value="runTime">1‑Mile Run</option>
+        </select>
+      </div>
+      <div class="control" id="value-input">
+        <label for="value">7-REP MAX</label>
+        <input type="number" id="value" placeholder="Enter Weight">
+      </div>
+      <div class="control" id="runtime-input" style="display:none;">
+        <label>RUN TIME</label>
+        <div class="run-time">
+          <input type="number" id="runMin" placeholder="Min">
+          <input type="number" id="runSec" placeholder="Sec">
+        </div>
+      </div>
+      <div class="control">
+        <label for="date">DATE</label>
+        <input type="date" id="date">
+      </div>
+      <button id="saveBtn">SAVE ENTRY</button>
+    </div>
 
-  <label>Dumbbell Press (lbs):</label>
-  <input type="number" id="dumbbell">
+    <!-- Chart -->
+    <canvas id="progressChart" width="600" height="400"></canvas>
 
-  <label>Pull-ups (lbs added or bodyweight):</label>
-  <input type="number" id="pullups">
-
-  <label>Incline Bench Press (lbs):</label>
-  <input type="number" id="incline">
-
-  <label>Squats (lbs):</label>
-  <input type="number" id="squats">
-
-  <label>Dips (lbs added or bodyweight):</label>
-  <input type="number" id="dips">
-
-  <label>1-Mile Run:</label>
-  <div class="run-time">
-    <input type="number" id="runMin" placeholder="Minutes">
-    <input type="number" id="runSec" placeholder="Seconds">
+    <!-- Clear data -->
+    <div style="text-align:center; margin-top:20px;">
+      <button id="clearBtn">CLEAR ALL DATA</button>
+    </div>
   </div>
 
-  <button onclick="saveEntry()">Save Entry</button>
+  <!-- Atomic Mills Logo Footer outside container -->
+  <div style="text-align:center; margin:20px 0;">
+    <a href="https://atomicmills.com" target="_blank">
+      <img src="images/atomic-mills-logo-amber.gif" alt="Atomic Mills Logo" style="display:block; margin:0 auto; max-width:200px; width:100%;">
+    </a>
+  </div>
 
-  <canvas id="progressChart" width="600" height="400"></canvas>
-
-  <script>
+<script>
     const storageKey = "bearTrackerData";
+    let chartInstance;
+    const exSel = document.getElementById('exercise');
+    const dateIn = document.getElementById('date');
+    const valInput = document.getElementById('value-input');
+    const rtInput  = document.getElementById('runtime-input');
+    const saveBtn  = document.getElementById('saveBtn');
+    const clearBtn = document.getElementById('clearBtn');
+    const scoreEl  = document.getElementById('bearScore');
 
-    function saveEntry() {
-      const date = document.getElementById("date").value;
-      if (!date) {
-        alert("Please enter a date.");
+    function getToday() { return new Date().toISOString().split('T')[0]; }
+    function toSecs(m, s) { return m * 60 + s; }
+    function triggerGlitch() {
+      const canvas = document.getElementById('progressChart');
+      canvas.classList.add('glitch');
+      setTimeout(() => canvas.classList.remove('glitch'), 300);
+    }
+    function beep() {
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const osc = ctx.createOscillator();
+      osc.frequency.value = 660;
+      osc.connect(ctx.destination);
+      osc.start();
+      setTimeout(() => { osc.stop(); ctx.close(); }, 100);
+    }
+
+        // Calculate and display B.E.A.R. Score using the most recent recordings
+    function updateScore() {
+      const data = JSON.parse(localStorage.getItem(storageKey) || '[]');
+      if (data.length === 0) {
+        scoreEl.innerText = '0';
         return;
       }
-
-      const entry = {
-        date,
-        deadlift: +document.getElementById("deadlift").value,
-        dumbbell: +document.getElementById("dumbbell").value,
-        pullups: +document.getElementById("pullups").value,
-        incline: +document.getElementById("incline").value,
-        squats: +document.getElementById("squats").value,
-        dips: +document.getElementById("dips").value,
-        runTime: convertToSeconds(
-          +document.getElementById("runMin").value,
-          +document.getElementById("runSec").value
-        )
-      };
-
-      const data = JSON.parse(localStorage.getItem(storageKey) || "[]");
-      data.push(entry);
-      localStorage.setItem(storageKey, JSON.stringify(data));
-      renderChart(data);
-    }
-
-    function convertToSeconds(min, sec) {
-      return min * 60 + sec;
-    }
-
-    function convertToMinSec(seconds) {
-      const m = Math.floor(seconds / 60);
-      const s = seconds % 60;
-      return `${m}:${s.toString().padStart(2, '0')}`;
-    }
-
-    function renderChart(data) {
-      const sorted = [...data].sort((a, b) => new Date(a.date) - new Date(b.date));
-      const labels = sorted.map(entry => entry.date);
-
-      const datasets = [
-        {
-          label: "Deadlift",
-          data: sorted.map(e => e.deadlift),
-          borderColor: "red",
-          fill: false
-        },
-        {
-          label: "Dumbbell Press",
-          data: sorted.map(e => e.dumbbell),
-          borderColor: "orange",
-          fill: false
-        },
-        {
-          label: "Pull-ups",
-          data: sorted.map(e => e.pullups),
-          borderColor: "green",
-          fill: false
-        },
-        {
-          label: "Incline Bench",
-          data: sorted.map(e => e.incline),
-          borderColor: "cyan",
-          fill: false
-        },
-        {
-          label: "Squats",
-          data: sorted.map(e => e.squats),
-          borderColor: "purple",
-          fill: false
-        },
-        {
-          label: "Dips",
-          data: sorted.map(e => e.dips),
-          borderColor: "magenta",
-          fill: false
-        },
-        {
-          label: "1-Mile Run (seconds)",
-          data: sorted.map(e => e.runTime),
-          borderColor: "yellow",
-          fill: false
-        }
-      ];
-
-      if (window.chartInstance) {
-        window.chartInstance.destroy();
-      }
-
-      const ctx = document.getElementById("progressChart").getContext("2d");
-      window.chartInstance = new Chart(ctx, {
-        type: "line",
-        data: {
-          labels,
-          datasets
-        },
-        options: {
-          responsive: true,
-          scales: {
-            y: {
-              beginAtZero: false,
-              title: {
-                display: true,
-                text: 'Pounds / Time in Seconds',
-                color: '#FFBF00'
-              },
-              ticks: {
-                color: '#FFBF00'
-              },
-              grid: {
-                color: '#333'
-              }
-            },
-            x: {
-              ticks: {
-                color: '#FFBF00'
-              },
-              grid: {
-                color: '#333'
-              }
-            }
-          },
-          plugins: {
-            legend: {
-              labels: {
-                color: '#FFBF00'
-              }
-            }
-          }
-        }
+      // Sort entries by date ascending
+      const sorted = data.slice().sort((a, b) => new Date(a.date) - new Date(b.date));
+      // For each lift, find the most recent non-null value
+      const liftKeys = ['deadlift','dumbbell','pullups','incline','squats','dips'];
+      let sum = 0;
+      liftKeys.forEach(key => {
+        const lastEntry = [...sorted].reverse().find(e => e[key] != null);
+        if (lastEntry) sum += lastEntry[key];
       });
+      // Determine mph: use most recent runTime, default to 1
+      const lastRun = [...sorted].reverse().find(e => e.runTime != null);
+      const mph = lastRun ? Math.max(3600 / lastRun.runTime, 1) : 1;
+      scoreEl.innerText = Math.round(sum * mph);
     }
 
-    window.onload = () => {
-      const stored = JSON.parse(localStorage.getItem(storageKey) || "[]");
-      if (stored.length > 0) renderChart(stored);
-    };
+    
+    exSel.addEventListener('change', () => {
+      if (exSel.value === 'runTime') {
+        valInput.style.display = 'none'; rtInput.style.display = 'flex';
+      } else {
+        valInput.style.display = 'flex'; rtInput.style.display = 'none';
+        document.getElementById('value').placeholder = "Enter Weight";
+      }
+      renderChart(); triggerGlitch(); updateScore();
+    });
+
+    saveBtn.addEventListener('click', () => {
+      const date = dateIn.value; if (!date) return alert('Please enter a date.');
+      const ex = exSel.value;
+      const val = ex === 'runTime'
+        ? toSecs(+document.getElementById('runMin').value, +document.getElementById('runSec').value)
+        : +document.getElementById('value').value;
+      const data = JSON.parse(localStorage.getItem(storageKey) || '[]');
+      let entry = data.find(e => e.date === date);
+      if (!entry) { entry = { date, deadlift: null, dumbbell: null, pullups: null, incline: null, squats: null, dips: null, runTime: null }; data.push(entry); }
+      entry[ex] = val;
+      localStorage.setItem(storageKey, JSON.stringify(data));
+      renderChart(); triggerGlitch(); beep(); updateScore();
+    });
+
+    clearBtn.addEventListener('click', () => {
+      if (!confirm('Clear all data?')) return;
+      localStorage.removeItem(storageKey); renderChart(); beep(); updateScore();
+    });
+
+    function renderChart() {
+      const all = JSON.parse(localStorage.getItem(storageKey) || '[]')
+        .sort((a,b) => new Date(a.date) - new Date(b.date));
+      const labels = all.map(e => e.date);
+      const ex = exSel.value;
+      const series = all.map(e => e[ex]);
+      const labelMap = {
+        deadlift: 'Deadlift', dumbbell: 'Overhead Dumbell Press', pullups: 'Pull-ups',
+        incline: 'Incline Bench Press', squats: 'Squats', dips: 'Dips', runTime: '1‑Mile Run'
+      };
+      if (chartInstance) chartInstance.destroy();
+      const ctx = document.getElementById('progressChart').getContext('2d');
+      chartInstance = new Chart(ctx, {
+        type: 'line', data: { labels, datasets:[{ label: labelMap[ex], data: series, borderColor:'#FFD85B', fill:false, point:{radius:3, hoverRadius:8} }] },
+        options:{
+          responsive:true, scales:{ y:{ ticks:{ color:'#FFD85B' }, grid:{ color:'#7F692D' } }, x:{ ticks:{ color:'#FFD85B' }, grid:{ color:'#7F692D' } } },
+          plugins:{ legend:{ labels:{ color:'#FFD85B' } } }, interaction:{ mode:'nearest', intersect:true }
+        }
+      }); 
+    }
+
+    window.onload = () => { dateIn.value = dateIn.value || getToday(); exSel.dispatchEvent(new Event('change')); };
   </script>
 </body>
 </html>
