--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
   </div>
 </a>
 
+<a href="thebear.html" class="bearplane-card">
+  <div class="bearplane-card-content">
+    <img src="images/the-bear-thumbnail.png" alt="B.E.A.R. App Preview" class="bearplane-image">
+    <div class="bearplane-text">
+      <h2>The B.E.A.R. - Bear Essentials Athletic Recorder</h2>
+      <p>Track your 7‑rep maxes across 7 exercises and watch your progress come alive on sleek, vintage‑style charts, complete with your personalized B.E.A.R. Score.</p>
+    </div>
+  </div>
+</a>
+
 <a href="atomic-shirt.html" class="bearplane-card">
   <div class="bearplane-card-content">
     <img src="images/atomic-shirt-preview-small.png" alt="Atomic Mills T-Shirt Preview" class="bearplane-image">
