--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </div>
 
   <h1>Welcome to Atomic Mills</h1>
-  <p>Makers of the World’s First Atomic Breakfast</p>
+  <p>Makers of the World’s First Atomic Snacks</p>
   
 <a href="bearplane.html" class="bearplane-card">
   <div class="bearplane-card-content">
