new gifs and youtube

--- a/fr/index.html
+++ b/fr/index.html
@@ -214,7 +214,7 @@
   <div class="section">
 
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Regarder la bande-annonce</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ Regarder la bande-annonce</a>
     </div>
 
     <p class="intro-paragraph">
