--- a/ja/index.html
+++ b/ja/index.html
@@ -86,7 +86,7 @@
   <div class="section">
 
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ トレーラーを見る</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ トレーラーを見る</a>
     </div>
 
     <p class="intro-paragraph">
