--- a/bearplane.html
+++ b/bearplane.html
@@ -298,7 +298,7 @@
   <div class="section">
     
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Watch the Trailer</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ Watch the Trailer</a>
     </div>
 
     <p class="intro-paragraph">
