--- a/de/index.html
+++ b/de/index.html
@@ -88,7 +88,7 @@
   <div class="section">
 
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Trailer ansehen</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ Trailer ansehen</a>
     </div>
 
     <p class="intro-paragraph">
