--- a/it/index.html
+++ b/it/index.html
@@ -87,7 +87,7 @@
   <div class="section">
 
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ Guarda il trailer</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ Guarda il trailer</a>
     </div>
 
     <p class="intro-paragraph">
