--- a/zh/index.html
+++ b/zh/index.html
@@ -86,7 +86,7 @@
   <div class="section">
 
     <div class="trailer-button">
-      <a href="https://youtu.be/xTnLBbqckjc" class="btn" target="_blank">▶ 观看预告片</a>
+      <a href="https://youtu.be/c-50eM83E58" class="btn" target="_blank">▶ 观看预告片</a>
     </div>
 
     <p class="intro-paragraph">
