--- a/ja/index.html
+++ b/ja/index.html
@@ -270,7 +270,8 @@
   </div>
 
   <div class="footer-links" style="text-align:center; margin-top:2em;">
-    <a href="/">⌂ ホーム</a> |
+    <!-- <a href="/">⌂ ホーム</a> | -->
+    <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">メディアキット 🗂️</a> |
     <a href="/bearplane.html">English</a> |
     <a href="/fr/">Français</a> |
     <a href="/es/">Español</a> |
