--- a/bearplane.html
+++ b/bearplane.html
@@ -520,6 +520,7 @@
   
 <div class="footer-links" style="text-align: center; margin-top: 2em;">
 <!--   <a href="/">⌂ Home</a> | -->
+  <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a> |
   <a href="/bearplane.html">English</a> |
   <a href="/fr/">Français</a> |
   <a href="/es/">Español</a> |
@@ -529,7 +530,6 @@
   <a href="/pl/">Polski</a> |
   <a href="/zh/">简体中文</a> |
   <a href="/ja/">日本語</a>
-<!--   | <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Media Kit 🗂️</a> -->
 </div>
 
 
