--- a/de/index.html
+++ b/de/index.html
@@ -271,7 +271,8 @@
   </div>
 
   <div class="footer-links" style="text-align:center; margin-top:2em;">
-    <a href="/">⌂ Startseite</a> |
+    <!-- <a href="/">⌂ Startseite</a> | -->
+    <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Medienkit 🗂️</a> |
     <a href="/bearplane.html">English</a> |
     <a href="/fr/">Français</a> |
     <a href="/es/">Español</a> |
