--- a/fr/index.html
+++ b/fr/index.html
@@ -400,7 +400,8 @@
   </div>
 
   <div class="footer-links" style="text-align:center; margin-top:2em;">
-    <a href="/">⌂ Accueil</a> |
+    <!-- <a href="/">⌂ Accueil</a> | -->
+    <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">Kit Média 🗂️</a> |
     <a href="/bearplane.html">English</a> |
     <a href="/fr/">Français</a> |
     <a href="/es/">Español</a> |
