--- a/zh/index.html
+++ b/zh/index.html
@@ -269,7 +269,8 @@
   </div>
 
   <div class="footer-links" style="text-align:center; margin-top:2em;">
-    <a href="/">⌂ 首页</a> |
+    <!-- <a href="/">⌂ 首页</a> | -->
+    <a href="https://drive.google.com/drive/folders/1frnhqy5XK2Sel6olELFOckkLg0NcYEWU?usp=sharing" target="_blank">媒体资料包 🗂️</a> |  
     <a href="/bearplane.html">English</a> |
     <a href="/fr/">Français</a> |
     <a href="/es/">Español</a> |
