implemented lazy loading

--- a/bearplane.html
+++ b/bearplane.html
@@ -324,25 +324,25 @@
   
   <div class="section">
     <h2>Ram! Roast! Roar! Victory awaits!</h2>
-    <img src="ram-roast-roar-gif.gif" alt="Gameplay GIF" class="gif">
+    <img src="ram-roast-roar-gif.gif" alt="Gameplay GIF" class="gif" loading="lazy">
     <p>Rain down righteous justice from above! Ram enemy aircraft into scrap metal, roast bad guys mid-flight with blazing jet flames, or belt out a sky-shaking roar that ejects foes straight from their cockpits. The skies won’t know what hit ’em.</p>
   </div>
 
   <div class="section">
     <h2>Suit up, power up, and look sharp!</h2>
-    <img src="800px-hats.gif" alt="Loadout GIF" class="gif">
+    <img src="800px-hats.gif" alt="Loadout GIF" class="gif" loading="lazy">
     <p>Every hero needs an arsenal... and flair! Equip bazookas, jousting lances, and other wild weapons of sky-bound destruction. Then top it off with a tactical hat built for glory. Some hats boost your weapons, others give you an edge in specific weather. The right combo turns you into a flying fortress!</p>
   </div>
 
   <div class="section">
     <h2>From the makers of the world’s first atomic breakfast</h2>
-    <img src="atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif">
+    <img src="atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif" loading="lazy">
     <p>Gobble Flappy Flakes, chug Nukey Nectar, and pop open a bottle of Honey Thunder Cola. These top-secret nutritional breakthroughs give you blistering speed, flapping flight, and brute strength. Side effects may include total domination.</p>
   </div>
 
   <div class="section">
     <h2>Co-op chaos</h2>
-    <img src="800px-co-op.gif" alt="Co-op GIF" class="gif">
+    <img src="800px-co-op.gif" alt="Co-op GIF" class="gif" loading="lazy">
     <p>Grab a controller and enlist a co-pilot! Player 2 joins as Rifle Rat, your gun-toting sidekick. Join forces, double your firepower, and deliver freedom one explosion at a time.</p>
   </div>
 
