--- a/de/index.html
+++ b/de/index.html
@@ -112,25 +112,25 @@
 
   <div class="section">
     <h2>Rammen! Rösten! Brüllen! Der Sieg wartet!</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="Gameplay-GIF" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="Gameplay-GIF" class="gif" loading="lazy">
     <p>Bringe himmlische Gerechtigkeit! Ramme feindliche Flieger in Schrott, röste deine Gegner mit Flammen oder brülle so laut, dass Piloten aus ihren Cockpits geschleudert werden.</p>
   </div>
 
   <div class="section">
     <h2>Rüste dich aus, stärke dich und sieh dabei schick aus!</h2>
-    <img src="/800px-hats.gif" alt="Ausrüstungs-GIF" class="gif">
+    <img src="/800px-hats.gif" alt="Ausrüstungs-GIF" class="gif" loading="lazy">
     <p>Jeder Held braucht ein Arsenal – und Stil! Bazookas, Hellebarden und mehr, garniert mit taktischen Hüten. Manche Hüte verbessern deine Waffen, andere geben dir bei jedem Wetter einen Vorteil.</p>
   </div>
 
   <div class="section">
     <h2>Von den Machern des ersten Atomfrühstücks</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif" loading="lazy">
     <p>Stürze dich in Flappy Flakes, schlürfe Nukey Nectar und öffne Honey Thunder Cola. Diese streng geheimen Nahrungsmittel geben dir Supergeschwindigkeit, flatternden Flug und rohe Kraft.</p>
   </div>
 
   <div class="section">
     <h2>Koop-Chaos</h2>
-    <img src="/800px-co-op.gif" alt="Koop-GIF" class="gif">
+    <img src="/800px-co-op.gif" alt="Koop-GIF" class="gif" loading="lazy">
     <p>Spiele solo oder verbinde einen Controller für lokalen Koop: Spieler 2 steuert Rocket Rat, deinen treuen Begleiter. Gemeinsam werdet ihr zur fliegenden Zerstörungsmaschine!</p>
   </div>
 
