--- a/it/index.html
+++ b/it/index.html
@@ -111,25 +111,25 @@
 
   <div class="section">
     <h2>Carica! Affumica! Ruggisci! La vittoria ti attende!</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="GIF di gameplay" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF di gameplay" class="gif" loading="lazy">
     <p>Scatena la giustizia dal cielo: carica gli aerei nemici, affumica i cattivi con le fiamme o ruggisci così forte da far volare i piloti fuori dalla cabina.</p>
   </div>
 
   <div class="section">
     <h2>Equipaggiati, potenziati e fai colpo!</h2>
-    <img src="/800px-hats.gif" alt="GIF di equipaggiamento" class="gif">
+    <img src="/800px-hats.gif" alt="GIF di equipaggiamento" class="gif" loading="lazy">
     <p>Ogni eroe ha bisogno di armi... e di stile! Bazooka, lance e molto altro, il tutto coronato da cappelli tattici: alcuni potenziano le armi, altri offrono un vantaggio col maltempo.</p>
   </div>
 
   <div class="section">
     <h2>Dai creatori della prima colazione atomica</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif" loading="lazy">
     <p>Gusta Flappy Flakes, sorseggia Nukey Nectar e stappa Honey Thunder Cola: scoperte segrete che donano velocità supersonica, volo frenetico e forza bruta.</p>
   </div>
 
   <div class="section">
     <h2>Caos cooperativo</h2>
-    <img src="/800px-co-op.gif" alt="GIF cooperativo" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF cooperativo" class="gif" loading="lazy">
     <p>Gioca in solitaria o con un amico in locale: il giocatore 2 è Rocket Rat, il fidato alleato. Unitevi e fate a pezzi ogni ostacolo!</p>
   </div>
 
