--- a/ja/index.html
+++ b/ja/index.html
@@ -110,25 +110,25 @@
 
   <div class="section">
     <h2>突撃！炙り！咆哮！勝利をつかめ！</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="ゲームプレイ GIF" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="ゲームプレイ GIF" class="gif" loading="lazy">
     <p>正義の鉄槌を空から下ろせ！敵機を激突で粉砕し、火炎で炙り、轟音の咆哮でパイロットを吹き飛ばせ。</p>
   </div>
 
   <div class="section">
     <h2>装備・強化・華麗に決めろ！</h2>
-    <img src="/800px-hats.gif" alt="装備 GIF" class="gif">
+    <img src="/800px-hats.gif" alt="装備 GIF" class="gif" loading="lazy">
     <p>ヒーローには武器とスタイルが必要だ！バズーカ、ランスなどを装備し、戦術帽を被って極上のコンボを決めろ。</p>
   </div>
 
   <div class="section">
     <h2>世界初の原子朝食 開発元</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills GIF" class="gif" loading="lazy">
     <p>Flappy Flakesを頬張り、Nukey Nectarを飲み、Honey Thunder Colaで締めくくる。これら全てが爆速・突撃力・怪力をもたらす秘密の兵器だ。</p>
   </div>
 
   <div class="section">
     <h2>協力プレイの大混乱</h2>
-    <img src="/800px-co-op.gif" alt="協力プレイ GIF" class="gif">
+    <img src="/800px-co-op.gif" alt="協力プレイ GIF" class="gif" loading="lazy">
     <p>一人でも、コントローラー接続で二人プレイもOK！プレイヤー2はRocket Ratとして参戦。一緒に空を支配しよう。</p>
   </div>
 
