--- a/pt/index.html
+++ b/pt/index.html
@@ -110,25 +110,25 @@
 
   <div class="section">
     <h2>Atropel! Torre! Rugido! A vitória aguarda!</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif" loading="lazy">
     <p>Solte a justiça dos céus! Atropel aeronaves inimigas, torre vilões em pleno voo ou solte um rugido tão potente que arranque pilotos de seus cockpits.</p>
   </div>
 
   <div class="section">
     <h2>Equipe-se, fortaleça-se e arrase!</h2>
-    <img src="/800px-hats.gif" alt="GIF de equipamentos" class="gif">
+    <img src="/800px-hats.gif" alt="GIF de equipamentos" class="gif" loading="lazy">
     <p>Todo herói precisa de arsenal... e estilo! Bazucas, lanças e mais, finalizados com chapéus táticos. Alguns turbinam armas, outros dão vantagens em climas extremos.</p>
   </div>
 
   <div class="section">
     <h2>Dos criadores do primeiro café da manhã atômico</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif" loading="lazy">
     <p>Devore Flappy Flakes, saboreie Nukey Nectar e abra uma Honey Thunder Cola. Essas inovações secretas oferecem supervelocidade, voo vibrante e força bruta.</p>
   </div>
 
   <div class="section">
     <h2>Caos cooperativo</h2>
-    <img src="/800px-co-op.gif" alt="GIF cooperação" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF cooperação" class="gif" loading="lazy">
     <p>Jogue solo ou conecte um controle: o jogador 2 vira Rocket Rat, seu parceiro de armas. Unam forças e varram tudo do céu!</p>
   </div>
 
