--- a/zh/index.html
+++ b/zh/index.html
@@ -110,25 +110,25 @@
 
   <div class="section">
     <h2>猛撞！火烤！咆哮！胜利在望！</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="游戏实况 GIF" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="游戏实况 GIF" class="gif" loading="lazy">
     <p>从空中释放正义：将敌机撞成碎片，用喷火烧烤对手，或一声咆哮将飞行员弹出驾驶舱。</p>
   </div>
 
   <div class="section">
     <h2>装备·强化·亮眼登场！</h2>
-    <img src="/800px-hats.gif" alt="装备选择 GIF" class="gif">
+    <img src="/800px-hats.gif" alt="装备选择 GIF" class="gif" loading="lazy">
     <p>英雄需要武器…也需要风度！火箭筒、长矛等，搭配战术帽。部分帽子强化武器，部分提供天气优势。</p>
   </div>
 
   <div class="section">
     <h2>原子早餐首创者出品</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills 功能 GIF" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="Atomic Mills 功能 GIF" class="gif" loading="lazy">
     <p>啃 Flappy Flakes，畅饮 Nukey Nectar，开启 Honey Thunder Cola——这些机密营养给你极速、振翅飞行与原始力量。</p>
   </div>
 
   <div class="section">
     <h2>合作大混战</h2>
-    <img src="/800px-co-op.gif" alt="合作模式 GIF" class="gif">
+    <img src="/800px-co-op.gif" alt="合作模式 GIF" class="gif" loading="lazy">
     <p>单人出击或本地联机（2P 控制 Rocket Rat）。合力爆破，成就飞行霸主！</p>
   </div>
 
