--- a/es/index.html
+++ b/es/index.html
@@ -112,25 +112,25 @@
 
   <div class="section">
     <h2>¡Embiste! ¡Asa! ¡Ruge! ¡La victoria te espera!</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="GIF de juego" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF de juego" class="gif" loading="lazy">
     <p>¡Desata justicia desde el cielo! Embiste aviones enemigos, asa a los malos con tus llamas propulsadas o deja escapar un rugido atronador que eyecte a los pilotos de sus cabinas.</p>
   </div>
 
   <div class="section">
     <h2>¡Equípate, fortalécete y luce increíble!</h2>
-    <img src="/800px-hats.gif" alt="GIF de equipamiento" class="gif">
+    <img src="/800px-hats.gif" alt="GIF de equipamiento" class="gif" loading="lazy">
     <p>Todo héroe necesita armamento... ¡y estilo! Bazucas, lanzas de justa y más, coronados con sombreros tácticos. Algunos sombreros mejoran tu arma, otros te dan ventaja en clima extremo.</p>
   </div>
 
   <div class="section">
     <h2>De los creadores del primer desayuno atómico</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="GIF de Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF de Atomic Mills" class="gif" loading="lazy">
     <p>Devora Flappy Flakes, sorbe Nukey Nectar y descorcha Honey Thunder Cola. Estas innovaciones ultra-secretas ofrecen velocidad extrema, vuelo batiente y fuerza bruta.</p>
   </div>
 
   <div class="section">
     <h2>Caos cooperativo</h2>
-    <img src="/800px-co-op.gif" alt="GIF cooperativo" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF cooperativo" class="gif" loading="lazy">
     <p>Juega en solitario o conecta un mando: el jugador 2 es Rocket Rat, tu fiel aliado. ¡Combina fuerzas y arrasa con todo!</p>
   </div>
 
