--- a/fr/index.html
+++ b/fr/index.html
@@ -240,25 +240,25 @@
   
   <div class="section">
     <h2>Percutez ! Rôtissez ! Rugissez ! La victoire vous attend !</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF de gameplay" class="gif" loading="lazy">
     <p>Déchaînez la justice céleste ! Percutez les avions ennemis en morceaux, rôtissez vos adversaires en plein vol avec vos flammes propulsées ou poussez un rugissement tonitruant qui expulse les pilotes hors de leur cockpit. Les cieux ne sauront pas ce qui les a frappés.</p>
   </div>
 
   <div class="section">
     <h2>Équipez-vous, renforcez-vous et faites sensation !</h2>
-    <img src="/800px-hats.gif" alt="GIF de sélection d’équipement" class="gif">
+    <img src="/800px-hats.gif" alt="GIF de sélection d’équipement" class="gif" loading="lazy">
     <p>Tout héros se doit d’avoir un arsenal... et du style ! Équipez-vous de bazookas, de lances de joute et d’autres armes de destruction aérienne. Puis coiffez-vous d’un chapeau tactique conçu pour la gloire. Certains chapeaux boostent vos armes, d’autres vous donnent un avantage par temps capricieux. La bonne combinaison fait de vous une forteresse volante !</p>
   </div>
 
   <div class="section">
     <h2>Des créateurs du tout premier petit-déjeuner atomique</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="GIF d’Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF d’Atomic Mills" class="gif" loading="lazy">
     <p>Croquez les Flappy Flakes, sirotez le Nukey Nectar et débouchez une bouteille de Honey Thunder Cola. Ces découvertes nutritionnelles ultra-secrètes vous offrent vitesse fulgurante, envolée battante et force brute. Effets secondaires possibles : domination totale.</p>
   </div>
 
   <div class="section">
     <h2>Chaos en coop</h2>
-    <img src="/800px-co-op.gif" alt="GIF de coopération" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF de coopération" class="gif" loading="lazy">
     <p>Prenez une manette et engagez un copilote ! Le joueur 2 incarne Rocket Rat, votre acolyte armé. Unissez vos forces, doublez votre puissance de feu et libérez la liberté une explosion après l’autre.</p>
   </div>
 
