--- a/pl/index.html
+++ b/pl/index.html
@@ -110,25 +110,25 @@
 
   <div class="section">
     <h2>Rozwal! Upraż! Zarycz! Zwycięstwo czeka!</h2>
-    <img src="/ram-roast-roar-gif.gif" alt="GIF z rozgrywki" class="gif">
+    <img src="/ram-roast-roar-gif.gif" alt="GIF z rozgrywki" class="gif" loading="lazy">
     <p>Zsyłaj sprawiedliwość z nieba! Rozrzucaj wrakiem wrogie samoloty, przypiekaj przeciwników ogniem lub rycz tak głośno, że wyrzucisz pilotów z kabiny.</p>
   </div>
 
   <div class="section">
     <h2>Wyposaż się, zwiększ siłę i wyglądaj stylowo!</h2>
-    <img src="/800px-hats.gif" alt="GIF ekwipunku" class="gif">
+    <img src="/800px-hats.gif" alt="GIF ekwipunku" class="gif" loading="lazy">
     <p>Każdy bohater potrzebuje arsenału... i stylu! Bazooki, kopie i więcej, zwieńczone taktycznymi kapeluszami. Niektóre wzmacniają broń, inne dają przewagę w trudnych warunkach.</p>
   </div>
 
   <div class="section">
     <h2>Od twórców pierwszego atomowego śniadania</h2>
-    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif">
+    <img src="/atomic-mills-powers-gif.gif" alt="GIF Atomic Mills" class="gif" loading="lazy">
     <p>Pożeraj Flappy Flakes, sącz Nukey Nectar i odkręcaj Honey Thunder Cola. Te tajne odkrycia dają superprędkość, dynamiczny lot i siłę godną niedźwiedzia.</p>
   </div>
 
   <div class="section">
     <h2>Kooperacyjny chaos</h2>
-    <img src="/800px-co-op.gif" alt="GIF kooperacji" class="gif">
+    <img src="/800px-co-op.gif" alt="GIF kooperacji" class="gif" loading="lazy">
     <p>Graj solo lub podłącz kontroler w lokalnej kooperacji – gracz 2 to Rocket Rat, twój wierny sprzymierzeniec. Zróbcie wspólny szturm!</p>
   </div>
 
