--- a/bearplane.html
+++ b/bearplane.html
@@ -306,7 +306,7 @@
     </p>
 
     <p id="coming-soon-text" style="text-align: center; font-weight: bold; font-size: 1.3em; color: darkred; margin-bottom: 5px;">
-      Coming Soon to:
+      Available now on:
     </p>
 
     <div class="store-buttons">
